--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   color: white; /*This indicates the font color. Change this, and it will change initially*/
 
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #52dcee, #560aad, #091bbd, #3c3d3d);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
